Favicon and some small adjustments.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="From the heat of the kitchen to the world of web development — explore the portfolio of a full-stack developer with a passion for clean code, creative solutions, and continuous growth."
     />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
